  method that returns a ``WSGIResponse`` object.

* ``egg:Paste#watch_threads`` will show tracebacks of each thread
  under Python 2.5.

* Made ``paste.util.template`` trim whitespace around statements that
  are on their own line.

* ``paste.fileapp.DataApp`` now accepts ``allowed_headers=[...]`` to
  specify the allowed headers.  By default only ``GET`` and ``HEAD``
  are allowed.

1.2.1
-----

* ``paste.httpserver`` didn't implement the ``readline`` that the
  ``cgi`` module wants (regression in 1.2).

1.2
---

* **Backward incompatible change**: ``paste.fileapp.FileApp`` properly
  supports request methods, including HEAD.  If you were subclassing
  ``FileApp`` or ``DataApp`` and overriding ``__call__()`` you may have
  to subclass ``get()`` instead.

* paste.httpheaders now parses the HTTP Accept-Language header and returns
  a list of languages the browser supports in the order it prefers them.

* paste.mimeparse module added that handles parsing HTTP Accept headers
  for quality and mime-types.

* ``paste.request.construct_url`` was adding ``SERVER_PORT`` to
  ``HTTP_HOST``; but ``HTTP_HOST`` (from the Host header) generally
  contains a port when necessary, and ``SERVER_PORT`` should only be
  used with ``SERVER_NAME``.

* Added entry point for ``paste.registry.RegistryManager``
  (``egg:Paste#registry``).

* ``paste.request.HeaderDict`` fixed to know that ``Content-Length``
  maps to ``CONTENT_LENGTH``.

* Can use ``paste.urlparser.StaticURLParser`` with sub-instances other
  than ``paste.fileapp.FileApp`` (if you subclass and override
  ``make_app``)

* ``paste.fixture.TestApp.get(status=X)`` takes a list of allowed
  status codes for ``X``.

* Added a small templating system for internal use (``paste.util.template``)

* Removed a bunch of long-deprecated modules (generally modules that
  have been moved to other names).

In paste.wsgiwrappers
~~~~~~~~~~~~~~~~~~~~~

* ``paste.wsgiwrappers.WSGIRequest`` has match_accept() function to screen